--- a/TexturePackHub/giveaways/index.html
+++ b/TexturePackHub/giveaways/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title>TexturePackHub | Artists</title>
+        <title>TexturePackHub | Home</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../assets/css/main.css">
+        <link rel="stylesheet" href="https://pandacatplayz.github.io/TexturePackHub/assets/css/main.css">
         <link rel="shortcut icon" type="image/x-icon" href="../assets/images/paintbrush.ico?">
         <script data-cfasync="false" src="//d3b4u8mwtkp9dd.cloudfront.net/?wmubd=980085"></script>
     </head>
@@ -19,7 +19,7 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="../">Home</a>
+                            <a class="nav-link active" href="../">Home</a>
                         </li>
                         <li class="nav-item dropdown">
                             <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Texture Packs</button>
@@ -39,38 +39,18 @@
                             <a class="nav-link" href="../pricing">Pricing</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../giveaways">Giveaways</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link active" href="">Artists
+                            <a class="nav-link active" href="">Giveaways
                                 <span class="visually-hidden">(current)</span>
                             </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../artists">Artists</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-
-        <div>
-            <div class="centered-title">
-                <h1>
-                    Artists of Texture Pack Hub!
-                </h1>
-            </div>
-
-            <div class="main-div">
-                <h3>
-                    sakuradev
-                </h3>
-                <h5>
-                    sakuradev, also known by PandaCatPlayz, is the founder and web designer of Texture Pack Hub! sakuradev has made 5 public packs!
-                </h5>
-                <h6>
-                    IGN: PandaCatPlayz. Discord: sakuradev#0940.
-                </h6>
-                <img class="banner" src="../assets/images/banners/sakuradev.jpg" alt="sakuradev">
-            </div>
-        </div>
+        
     </body>
     <script src="../assets/js/bootstrap.bundle.min.js"></script>
 </html>
