--- a/TexturePackHub/index.html
+++ b/TexturePackHub/index.html
@@ -41,6 +41,9 @@
                             <a class="nav-link" href="pricing">Pricing</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="giveaways">Giveaways</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="artists">Artists</a>
                         </li>
                     </ul>
