--- a/TexturePackHub/pricing/index.html
+++ b/TexturePackHub/pricing/index.html
@@ -41,6 +41,9 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="../giveaways">Giveaways</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="../artists">Artists</a>
                         </li>
                     </ul>
