--- a/TexturePackHub/18/index.html
+++ b/TexturePackHub/18/index.html
@@ -38,6 +38,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../pricing">Pricing</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../giveaways">Giveaways</a>
+                        </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="../artists">Artists</a>
                         </li>
