--- a/TexturePackHub/pricing/index.html
+++ b/TexturePackHub/pricing/index.html
@@ -140,7 +140,7 @@
                 <pre>
 
                 </pre>
-                <button type="button" class="btn btn-primary" id="submit" onclick="calculateCost(), sendToDiscord()">Submit</button>
+                <button type="button" class="btn btn-primary" id="submit" onclick="calculateCost(), sendToWebhook()">Submit</button>
             </form>
             <p id="formComplete"></p>
         </div>
